--- a/src/index.css
+++ b/src/index.css
@@ -8,18 +8,47 @@ h1 {
 }
 
 .projectContainer {
-  border: 8px solid red;
+  /* border: 8px solid red; */
   display: flex; /* Enables Flexbox */
   justify-content: center; /* Centers children horizontally */
   align-items: center; /* Centers children vertically (optional) */
-  column-gap: 100px; /* Adds space between cards */
-  height: 100vh; /* Optional: makes the container full height */
+  column-gap: 150px; /* Adds space between cards */
+  height: 70vh; /* Optional: makes the container full height */
   flex-wrap: wrap; /*Allows items to wrap to the next line */
 }
 
+#main-projects-title {
+  color: #ffffff;
+  font-size: 3rem;
+  font-weight: 800;
+  margin-top: 5rem;
+  justify-content: center;
+  margin-bottom: 0;
+}
+/* Card */
+.btn-color {
+  background-color: #10a37f !important;
+  color: #ffffff !important;
+  border-radius: 6px;
+  border: black 3px solid;
+}
+.btn-color:hover {
+  background-color: #085646 !important;
+  color: #ffffff !important;
+  border-radius: 6px;
+  border: black 3px solid;
+}
 .card {
-  border: 10px solid black;
-  background-color: black;
+  color: #ffffff;
+  border: 5px solid black;
+  background-color: #2c2c2c;
+  border-radius: 12px;
+}
+/* I wanted to remove the gap caused by bootstraps def radius settings */
+/* !important makes sure bootstrap doesn't have precedence */
+.no-radius {
+  border-top-left-radius: 6px !important;
+  border-top-right-radius: 6px !important;
 }
 
 /* Project Page */
@@ -29,6 +58,7 @@ h1 {
   font-weight: 800;
   margin-bottom: 1rem;
   justify-content: center;
+  margin-top: 2rem;
 }
 
 .ProjectDescriptionContainer {
@@ -68,8 +98,8 @@ h1 {
   margin-top: 10px;
   /* border: blue 2px solid; */
   height: 300px;
-  margin-left: 3px;
-  margin-right: 3px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .BottomBox {
@@ -90,18 +120,27 @@ h1 {
   flex-wrap: wrap;
   justify-content: center;
   align-content: space-evenly;
-  border: #10a37f 2px solid;
+  border: #085646 5px solid;
   border-radius: 12px;
   max-width: 450px;
   flex-direction: column;
 }
+.BottomOutline {
+  border: black 2px solid;
+  border-radius: 12px;
+  height: 376px;
+}
 
+.TopOutline {
+  border: black 2px solid;
+  border-radius: 12px;
+}
 .TopDescription {
   margin-top: 10px;
   /* border: green 2px solid; */
   height: 250px;
-  margin-left: 3px;
-  margin-right: 3px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 .TopBox {
   max-width: 1000px;
@@ -116,7 +155,7 @@ h1 {
   flex-wrap: wrap;
   justify-content: center;
   align-content: space-evenly;
-  border: #10a37f 2px solid;
+  border: #085646 5px solid;
   border-radius: 12px;
   max-width: 460px;
   flex-direction: column;
@@ -147,7 +186,3 @@ body {
 .custom-navbar .nav-link:hover {
   color: #10a37f !important; /* optional highlight */
 }
-
-/* make stack once under 1408 width */
-/* Increase font weight for titles and change font size to be bigger
-create box elements for paragraphs */
