--- a/src/index.css
+++ b/src/index.css
@@ -198,3 +198,34 @@ body {
   outline: none;
   box-shadow: none;
 }
+.navbar-toggler:hover {
+  background-color: #10a37f !important;
+}
+
+/* About Me Page */
+.AboutMeContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-content: space-evenly;
+  border: #008000 solid 2px;
+  height: 90vh;
+}
+.PitchBox {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  border: red solid 2px;
+}
+.EducationBox {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  border: red solid 2px;
+}
+.AboutImgBox {
+  border: #085646 solid 2px;
+}
+.AboutDescriptionBox {
+  border: #085646 solid 2px;
+}
