--- a/src/styles/_test.scss
+++ b/src/styles/_test.scss
@@ -1,3 +1,47 @@
 .testbutton {
   color: white;
 }
+.center-box {
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  width: 100%;
+  // border: red solid 5px;
+}
+.api-container {
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  background-color: #2c2c2c;
+  box-shadow: 0 0 0 3px black;
+}
+.img-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 100px;
+  flex-wrap: wrap;
+  margin: 20px;
+  margin-bottom: 0px;
+}
+.img-box {
+  width: 700px;
+  height: 700px;
+  border: 10px solid transparent;
+  padding: 6px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3),
+    inset 0 0 5px rgba(255, 255, 255, 0.4);
+  border-radius: 6px;
+}
+.img-button {
+  width: 500px;
+  background-color: white;
+  border-radius: 10px;
+  border: transparent;
+}
+.img-button:hover {
+  background-color: #085646;
+  color: white;
+}
